# graphbot

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  main.py  markGraphPort.js  pyproject.toml  rustfmt.toml  server.py
.github/workflows/: spellcheck.yml
conf/: main.toml
graphbot-cli/: Cargo.toml
graphbot-cli/src/: main.rs
graphbot-config/: Cargo.toml
graphbot-config/src/: lib.rs
graphbot-db/: Cargo.toml
graphbot-frontend/: Cargo.toml
graphbot-frontend/src/: main.rs
graphbot-frontend/templates/: base.html  index.html
graphport-db/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20250701_033951_page_map.rs  m20250701_034647_error.rs
mwparserfromhell-rs/: Cargo.toml
mwparserfromhell-rs/src/: lib.rs
scripts/: bootstrap_python.sh  build.sh  build_python.sh  buildpython.sh  deploy.sh  deploy_python.sh  initdb.sh  python_run.bash  run.bash  run_frontend.sh  run_python.bash  run_python.sh  viewbuild.sh
src/: api_utils.rs  config.rs  convert.rs  convert_graph.rs  failed_revs.rs  main.rs  page_handler.rs  parser.rs  rev_info.rs  server.rs
src/convert/: graph_chart.rs  mod.rs
src/graph_task/: mod.rs
src/graph_task/convert/: graph_chart.rs  mod.rs
src/graph_task/schema/: chart.rs  mod.rs  tab.rs
src/report_graph_errors_task/: mod.rs
src/rfd_task/: mod.rs
src/schema/: chart.rs  mod.rs  tab.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/components/: ControlPanel.svelte  StatusCard.svelte
ui/src/lib/: api.ts
ui/src/routes/: +page.svelte
wikicode/: Cargo.toml
wikicode/examples/: sandbox.rs
wikicode/src/: builder.rs  contexts.rs  definitions.rs  lib.rs  nodes.rs  tokenizer.py  tokenizer.rs  tokens.rs  utils.rs  wikicode.rs
wikicode/src/nodes/: _base.rs  argument.rs  comment.rs  external_link.rs  heading.rs  html_entity.rs  mod.rs  template.rs  text.rs  wikilink.rs
wikicode/src/nodes/extras/: attribute.rs  mod.rs  parameter.rs
wikicode/src/parser/: builder.rs  contexts.rs  errors.rs  mod.rs  tokenizer.rs  tokens.rs
