[workspace]
members = [
    "graphbot-cli",
    "graphbot-config",
    "graphbot-db"
]
exclude = ["migration"]

[workspace.dependencies]
anyhow = "1.0"
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9"

[package]
name = "graphbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
diacritics = "0.2.2"
futures = "0.3"
graphbot-config = { path = "graphbot-config" }
graphbot-db = { path = "graphbot-db" }
mwapi_responses = "0.4.2"
mwbot = "0.6"
num_cpus = "1.17.0"
paste = "1.0.15"
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
toml = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
url = "2.5.4"
xml-rpc = "0.1"
